src/main/webapp/resources/css/composants_opentheso.css
/* ... */
body .ui-tabs .ui-tabs-nav li.ui-tabs-header.ui-state-active a {
    color: #f47b2a;
}

/** Tree **/
body .ui-tree .ui-tree-container .ui-treenode .ui-treenode-content.ui-state-highlight {
    background: #ecf8f1;
    color: #143a1e;
    font-weight: bold;
}

body .ui-tree .ui-tree-container .ui-treenode .ui-treenode-content .ui-tree-toggler.ui-icon-triangle-1-e:before {
    color: #F47B2A;
    padding: 0;
}

body .ui-tree {
    padding: 0;
    font-size: 0.8rem;
}

.ui-tree .ui-tree-container {
    overflow: hidden;
    font-size: 0.8rem;
}

body .ui-tree .ui-tree-container .ui-treenode {
    padding: 0em 0;
}

body .ui-tree .ui-tree-container .ui-treenode .ui-treenode-content {
    height: 23px;
    font-size: 0.8rem;
}

body .ui-tree .ui-tree-container .ui-treenode .ui-treenode-content.ui-state-highlight{
    padding: 0em 0;
    font-size: 0.8rem;
}

body .ui-tree .ui-tree-container .ui-treenode .ui-treenode-content .ui-tree-toggler {
    margin: 0 0.3rem 0 0;
    font-size: 0.8rem;
}

body .ui-tree .ui-tree-container .ui-treenode .ui-treenode-content.ui-state-highlight .ui-tree-toggler,
body .ui-tree .ui-tree-container .ui-treenode .ui-treenode-content.ui-state-highlight .ui-treenode-icon {
    color: #f47b2a;
    font-size: 0.8rem;
}

body .ui-tree .ui-tree-container .ui-treenode .ui-treenode-content .ui-tree-toggler.ui-icon-triangle-1-s {
    color: #f47b2a;
    font-size: 0.7rem;
}

body .ui-tree .ui-tree-container .ui-treenode .ui-treenode-content .ui-tree-toggler.ui-icon-triangle-1-e:before {
    font-size: 0.7rem;
}

/* Espacement entre elements */
/*.ui-tree-droppoint {
    height: 0px;
}*/

/* Espacement entre sous elements */
body .ui-tree .ui-tree-container .ui-treenode .ui-treenode-content .ui-treenode-icon {
    margin: 0 0.25rem 0 0;
    margin-left: -10px;
}

/**Button*/
.ui-button-success {
    background-color: #F47B2A !important;
    border-color: #F47B2A !important;
    font-size: 30px !important;
    padding: 0.5rem 1rem 0.5rem 2rem;
}

.ui-button-success:hover {
    background-color: #E45C00 !important;
    border-color: #E45C00 !important;
}

.ui-button-success:active {
    background-color: #8A3B05 !important;
    border-color: #8A3B05 !important;
    font-weight: bold;
}

.ui-button-secondary {
    min-width: 100px;
    padding: 0.5rem 1rem 0.5rem 2rem;
}

body .ui-button.ui-button-text-icon-left .ui-button-text {
    font-size: 14px;
}


body .ui-paginator .ui-paginator-pages .ui-paginator-page.ui-state-active {
    background: #ecf8f1;
    color: #226b40;
    font-weight: bold;
}

body .ui-paginator {
    background: #fff;
    border: solid #226b40;
}


body .ui-autocomplete-panel .ui-autocomplete-items .ui-autocomplete-item.ui-autocomplete-row>td {
    padding: 0.3rem 0.6rem;
}

body .ui-autocomplete-panel .ui-autocomplete-items .ui-autocomplete-item.ui-state-highlight {
    background: #ecf8f1;
    color: #226b40;
}


/******************************* ui-accordion *****************************/
body .ui-accordion .ui-accordion-header {
    border: 1px solid #226b40;
    border-top: 0 none;
    background: #ecf8f1;
    color: #43B572;
    padding: 0.5em;
}

body .ui-accordion .ui-accordion-header.ui-state-active {
    background: #226b40;
    border-color: #226b40;
    color: #ecf8f1;
}

body .ui-accordion .ui-accordion-header:first-child {
    margin-top: 0;
    border-top: 1px solid #226b40;
    border-top-right-radius: 4px;
    border-top-left-radius: 4px;
}

body .ui-accordion .ui-accordion-header {
    border: 1px solid #226b40;
    border-top: 0 none;
    color: #43B572;
    padding: 0.5em;
}

body .ui-accordion .ui-accordion-content {
    border: 1px solid #226b40;
    background: #fff;
    color: #43B572;
}

